src/test/ui/resolve/resolve-hint-macro.stderr
error[E0423]: expected function, found macro `assert_eq`
  --> $DIR/resolve-hint-macro.rs:2:5
   |
LL |     assert_eq(1, 1);
   |     ^^^^^^^^^ not a function
   |
help: use `!` to invoke the macro
   |
LL |     assert_eq!(1, 1);
   |              +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
