src/test/ui/resolve/resolve-hint-macro.rs
fn main() {
    assert_eq(1, 1);
    //~^ ERROR expected function, found macro `assert_eq`
}
